# FileScanner

./: CMakeLists.txt  README.md  base.csv  main.cpp
inc/: details.hpp  queue.hpp  scanner.hpp  thread_pool.hpp
src/: CMakeLists.txt  details.cpp  queue.cpp  scanner.cpp  thread_pool.cpp
tests/: CMakeLists.txt  base.csv  generate_files.py  test.cpp  test.py
tests/files/: file1.txt  file10.txt  file100.txt  file11.txt  file12.txt  file13.txt  file14.txt  file15.txt  file16.txt  file17.txt  file18.txt  file19.txt  file2.txt  file20.txt  file21.txt  file22.txt  file23.txt  file24.txt  file25.txt  file26.txt  file27.txt  file28.txt  file29.txt  file3.txt  file30.txt  file31.txt  file32.txt  file33.txt  file34.txt  file35.txt  file36.txt  file37.txt  file38.txt  file39.txt  file4.txt  file40.txt  file41.txt  file42.txt  file43.txt  file44.txt  (+60 more)
